# voyager-game

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.json  linter.sh
cmake-utilits/: templates.cmake
data/: locale.json  sprites.json
data/levels/: 1.json  1_дфые.json  2.json  3.json  example_level.json
data/player/: example_players.json  example_properties.json  example_stats.json
libs/debug/: CMakeLists.txt
libs/debug/include/: exception.hpp
libs/debug/include/debug/: exception.h  exception.hpp
libs/debug/src/: exception.cpp
libs/debug/test/: CMakeLists.txt
libs/event_controller/: CMakeLists.txt
libs/event_controller/include/: event_controller.h
libs/event_controller/include/event_controller/: controller.h  event.h  i_command.h  i_controller.h  i_eventable.h  i_subscriber.h
libs/event_controller/src/: controller.cpp  event_controller.cpp  sf_eventable_impl.cpp
libs/event_controller/test/: CMakeLists.txt  test_main.cpp
libs/event_controller/test/tests/: test.cpp
libs/game/: CMakeLists.txt
libs/game/include/game/: camera.hpp  exceptions.hpp  game.hpp  interface.hpp  level_loader.hpp  main_object.hpp  objects.hpp  progress.hpp  sprite_creator.hpp  structs.hpp  timer.hpp
libs/game/include/game/loaders/: level_loader.hpp
libs/game/include/loaders/: level_loader.hpp  progress_loader.hpp
libs/game/src/: camera.cpp  game.cpp  level_loader.cpp  main_object.cpp  objects.cpp  progress.cpp  progress_loader.cpp  sprite_creator.cpp  timer.cpp
libs/game/test/: CMakeLists.txt  test_main.cpp
libs/game/test/data/: 1.json  example_progress_load.json  example_progress_save.json
libs/game/test/tests/: level_tests.cpp  progress_tests.cpp
libs/game_manager/: CMakeLists.txt
libs/game_manager/include/: manager.hpp
libs/game_manager/include/game_manager/: commands.h  commands.hpp  config.h  config.hpp  game_manager.h  game_manager.hpp  interface.hpp  states.hpp
libs/game_manager/src/: config.cpp  game_manager.cpp  states.cpp
libs/game_manager/src/imported/: main_menu.cpp  pause_menu.cpp  vertical_centered_menu.cpp
libs/game_manager/test/: CMakeLists.txt  test_main.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/include/: graphics.h
libs/graphics/include/graphics/: background_sprite.h  button.h  camera.h  color.h  font.h  graphics.h  graphics.hpp  i_drawable.h  i_graphics_factory.h  i_spite_loader.h  i_sprite.h  i_text.h  i_texture.h  i_texture_loader.h  json_sprite_sheet_loader.h  orbit_shape.h  pos_drawable.h  rect.h  sf_canvas.h  sf_font.h  sf_graphics_factory.h  sf_json_sprite_sheet_loader.h  sf_sprite.h  sf_text.h  sf_texture.h  sf_texture_loader.h  sprite.h  sprite_info.h  text.h  texture_storage.h
libs/graphics/include/graphics/sf/: sf_canvas.h  sf_font.h  sf_graphics_factory.h  sf_rect.h  sf_text.h
libs/graphics/src/: background_sprite.cpp  button.cpp  camera.cpp  font.cpp  graphics.cpp  json_sprite_sheet_loader.cpp  orbit_shape.cpp  pos_drawable.cpp  rect.cpp  sf_canvas.cpp  sf_canvas_impl.cpp  sf_font.cpp  sf_graphics_factory.cpp  sf_json_sprite_sheet_loader.cpp  sf_rect.cpp  sf_sprite.cpp  sf_text.cpp  sf_texture.cpp  sf_texture_loader.cpp  sprite.cpp  text.cpp  texture_storage.cpp
libs/graphics/test/: CMakeLists.txt  test_main.cpp
libs/graphics/test/tests/: graphics_tests.cpp
libs/graphics/test/tests/sprites_info/: some.json
libs/loaders/: CMakeLists.txt
libs/loaders/include/: loaders.hpp
libs/loaders/include/loaders/: config_loader.hpp  init_configs_loaders.hpp  level_loader.hpp  locale_loader.h  products_loader.hpp  progress_loader.hpp  properties_loader.hpp
libs/loaders/src/: config_loader.cpp  init_configs_loaders.cpp  level_loader.cpp  loaders.cpp  locale_loader.cpp  progress_loader.cpp  properties_loader.cpp
libs/loaders/test/: CMakeLists.txt  test_main.cpp
libs/loaders/test/data/: example_properties_save.json
libs/loaders/test/tests/: properties_tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/: math.hpp  umath.h
libs/math/include/math/: equation_kepler.hpp  interface.hpp  polygon.hpp  utilits.h  utilits.hpp  vector2d.h  vector2d.hpp
libs/math/src/: equation_kepler.cpp  polygon.cpp  utilits.cpp  vector2d.cpp
libs/math/test/: CMakeLists.txt
libs/math/test/tests/: coords_tests.cpp  kepler_test.cpp  polygon_tests.cpp  utilits_tests.cpp  vector_tests.cpp
libs/math_external/: CMakeLists.txt
libs/math_external/include/: math_external.hpp
libs/math_external/src/: utilits.cpp
libs/math_external/test/: CMakeLists.txt
libs/menu/: CMakeLists.txt
libs/menu/include/: menu.h
libs/menu/src/: command_button.cpp  create_standart_menu_button.cpp  end_game_menu.cpp  game_info.cpp  game_screen.cpp  levels_menu.cpp  main_menu.cpp  menu.cpp  pause_menu.cpp  text_viewer.cpp  vertical_centered_menu.cpp
libs/menu/test/: CMakeLists.txt
libs/physics/: CMakeLists.txt
libs/physics/include/: physics.h  physics.hpp
libs/physics/include/physics/: astronimical_object.h  astronimical_object.hpp  astronomical_object.hpp  colision.h  colision.hpp  engine.h  engine.hpp  interface.h  interface.hpp  mechanic.hpp  orbit.hpp  orbit_tests.h  physical_object.hpp  physics.h  special_object.hpp
libs/physics/src/: astronimical_object.cpp  astronomical_object.cpp  colision.cpp  engine.cpp  interface.cpp  mechanic.cpp  orbit.cpp  physical_object.cpp  physics.cpp  special_object.cpp
libs/physics/test/: CMakeLists.txt
libs/physics/test/tests/: astronomical_obj_tests.cpp  engine_tests.cpp  newtow_force_test.cpp  orbit.cpp  orbit_tests.cpp
libs/sf_graphics/: CMakeLists.txt
libs/sf_graphics/include/: sf_graphics.h
libs/sf_graphics/src/: sf_canvas_impl.cpp  sf_eventable_impl.cpp  sf_font.cpp  sf_graphics_factory.cpp  sf_orbit_shape.cpp  sf_rect.cpp  sf_sprite.cpp  sf_text.cpp  sf_texture.cpp
libs/sf_graphics/test/: CMakeLists.txt
libs/shop/: CMakeLists.txt
libs/shop/include/loaders/: products_loader.hpp
libs/shop/include/shop/: base_product.hpp  products.hpp  shop.hpp
libs/shop/test/: CMakeLists.txt
src/: main.cpp  test_main.cpp
(+74 files in other folders)
